--- a/app/www/index.jade
+++ b/app/www/index.jade
@@ -1,5 +1,6 @@
 doctype html
 html(lang="en")
   head
+    link(href='/assets/css/main.css', rel='stylesheet', type='text/css')
   body
     p Hello World
