adding content type to js files

--- a/app/www/index.jade
+++ b/app/www/index.jade
@@ -2,5 +2,6 @@ doctype html
 html(lang="en")
   head
     link(href='/assets/css/main.css', rel='stylesheet', type='text/css')
+    script(src='/assets/js/main.js', type='text/javascript')
   body
     p Hello World
