adding under construction to main page

--- a/app/www/index.jade
+++ b/app/www/index.jade
@@ -1,7 +1,8 @@
 doctype html
 html(lang="en")
   head
+    title 4ward Fabrications
     link(href='/assets/css/main.css', rel='stylesheet', type='text/css')
     script(src='/assets/js/main.js', type='text/javascript')
   body
-    p Hello World
+    p Currently under construction. Please check back shortly.
