adding header and footer

--- a/app/www/index.jade
+++ b/app/www/index.jade
@@ -1,8 +1,10 @@
+- var title = '4ward Fabrications | Home'
+
 doctype html
 html(lang="en")
   head
-    title 4ward Fabrications
-    link(href='/assets/css/main.css', rel='stylesheet', type='text/css')
-    script(src='/assets/js/main.js', type='text/javascript')
+    include ./includes/_head.jade
   body
     p Currently under construction. Please check back shortly.
+  footer
+    include ./includes/_footer.jade
