--- a/app/www/index.jade
+++ b/app/www/index.jade
@@ -5,6 +5,9 @@ html(lang="en")
   head
     include ./includes/_head.jade
   body
-    p Currently under construction. Please check back shortly.
-  footer
-    include ./includes/_footer.jade
+    #navbar
+      include ./includes/_navbar.jade
+    #content
+      p Currently under construction. Please check back shortly.
+    footer
+      include ./includes/_footer.jade
