navbar and content are now sections

--- a/app/www/index.jade
+++ b/app/www/index.jade
@@ -5,9 +5,9 @@ html(lang="en")
   head
     include ./includes/_head.jade
   body
-    #navbar
+    section#navbar
       include ./includes/_navbar.jade
-    #content
+    section#content
       p Currently under construction. Please check back shortly.
     footer
       include ./includes/_footer.jade
