adding meta information

--- a/app/www/index.jade
+++ b/app/www/index.jade
@@ -1,4 +1,7 @@
-- var title = '4ward Fabrications | Home'
+- var site =  {};
+- site.title = '4ward Fabrications | Home';
+- site.description = 'This is the description';
+- site.author = 'Anthony Sceresini <me-at-ardel.io>';
 
 doctype html
 html(lang="en")
