--- a/app/www/includes/_head.jade
+++ b/app/www/includes/_head.jade
@@ -1,3 +1,8 @@
-title= title
+meta(charset="utf-8")
+meta(content="IE=edge,chrome=1", "http-equiv"="X-UA-Compatible")
+meta(content="width=device-width initial-scale=1", name="viewport")
+meta(name="description", content="#{site.description}")
+meta(name='author', content="#{site.author}")
+title= site.title
 link(href='/assets/css/main.css', rel='stylesheet', type='text/css')
 script(src='/assets/js/main.js', type='text/javascript')
