--- a/app/www/includes/_head.jade
+++ b/app/www/includes/_head.jade
@@ -4,5 +4,6 @@ meta(content="width=device-width initial-scale=1", name="viewport")
 meta(name="description", content="#{site.description}")
 meta(name='author', content="#{site.author}")
 title= site.title
+
+link(href='//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css', rel='stylesheet', type='text/css')
 link(href='/assets/css/main.css', rel='stylesheet', type='text/css')
-script(src='/assets/js/main.js', type='text/javascript')
