--- a/app/www/includes/_jumbotron-dark.jade
+++ b/app/www/includes/_jumbotron-dark.jade
@@ -2,6 +2,6 @@
   .row
     .col-sm-10.col-sm-offset-1
       h1.
-        Some Kind Of Text Here
+        4ward Fabrications
       h2.
-        You should probably replace this text with some kind of description
+        Specialising in all aspects of welding, metal fabrication, maintenance and repairs.
