--- a/app/www/index.jade
+++ b/app/www/index.jade
@@ -10,7 +10,7 @@ html(lang="en")
   body
     section#navbar
       include ./includes/_navbar.jade
-    section#jumbotron.jumbotron.dark
+    section#header.jumbotron.dark
       include ./includes/_jumbotron-dark.jade
     footer
       include ./includes/_footer.jade
