--- a/app/www/assets/css/modules/jumbotron.css
+++ b/app/www/assets/css/modules/jumbotron.css
@@ -1,41 +1,36 @@
-section#header {
-  background: #777 url("/assets/images/backgrounds/homepage_jumbotron_grey2.jpg") no-repeat center center;
-  background-size: cover;
-  background-attachment: fixed;
-}
-
-section.jumbotron {
+.jumbotron {
+  background: none;
   margin: 0 auto;
   text-align: center;
   padding: 100px 0 100px 0;
 }
 
-section.jumbotron .spacer {
+.jumbotron .spacer {
   height: 50px;
 }
 
-section.jumbotron h1 {
+.jumbotron h1 {
   font-size: 3.2em;
   font-weight: 200;
   letter-spacing: -1px;
   line-height: 1.2em;
 }
 
-section.jumbotron h2 {
+.jumbotron h2 {
   font-size: 1.35em;
   font-weight: 100;
   line-height: 1.6em;
 }
 
-section.jumbotron h1, section.jumbotron h2 {
+.jumbotron h1, .jumbotron h2 {
   padding-bottom: 0;
   margin-bottom: 0;
 }
 
-section.jumbotron.dark h1 {
+.jumbotron.dark h1 {
   color: #fff;
 }
 
-section.jumbotron.dark h2 {
+.jumbotron.dark h2 {
   color: rgba(255,255,255,.8);
 }
