--- a/app/www/includes/_jumbotron-dark.jade
+++ b/app/www/includes/_jumbotron-dark.jade
@@ -1,8 +1,9 @@
-.spacer
-.container-fluid
-  .row
-    .col-sm-10.col-sm-offset-1
-      h1.
-        4ward Fabrications
-      h2.
-        Specialising in all aspects of welding, metal fabrication, maintenance and repairs.
+.jumbotron.dark
+  .spacer
+  .container-fluid
+    .row
+      .col-sm-10.col-sm-offset-1
+        h1.
+          4ward Fabrications
+        h2.
+          Specialising in all aspects of welding, metal fabrication, maintenance and repairs.
