--- a/app/www/assets/css/modules/navbar.css
+++ b/app/www/assets/css/modules/navbar.css
@@ -1,3 +1,7 @@
-.navbar-brand {
+a.navbar-brand {
+  width: 150px;
+  height: 50px;
   padding: 5px 15px;
+  background: url("/assets/images/logos/brand_480x160.png") no-repeat center center;
+  background-size: 120px 40px;
 }
