--- a/app/www/index.jade
+++ b/app/www/index.jade
@@ -12,5 +12,7 @@ html(lang="en")
       include ./includes/_navbar.jade
     section#header
       include ./includes/_jumbotron-dark.jade
+    section#quoteform
+      include ./includes/_quoteform.jade
     footer
       include ./includes/_footer.jade
