--- a/app/www/assets/css/modules/jumbotron.css
+++ b/app/www/assets/css/modules/jumbotron.css
@@ -34,3 +34,11 @@
 .jumbotron.dark h2 {
   color: rgba(255,255,255,.8);
 }
+
+.jumbotron.light h1 {
+  color: #333;
+}
+
+.jumbotron.light h2 {
+  color: rgb(102, 102, 102);
+}
