--- a/app/www/index.jade
+++ b/app/www/index.jade
@@ -11,7 +11,7 @@ html(lang="en")
     section#navbar
       include ./includes/_navbar.jade
     section#header
-      include ./includes/_jumbotron-dark.jade
+      include ./includes/_header.jade
     section#quoteform
       include ./includes/_quoteform.jade
     footer
