no longer want a fixed navbar

--- a/app/www/includes/_navbar.jade
+++ b/app/www/includes/_navbar.jade
@@ -1,4 +1,4 @@
-nav.navbar.navbar-default.navbar-fixed-top.4wardfab-nav(role="navigation")
+nav.navbar.navbar-default.4wardfab-nav(role="navigation")
   .container-fluid
     .navbar-header
       button.navbar-toggle&attributes({"data-target": "#4wardfabrication-navbar-collapse", "data-toggle": "collapse", type: "button"})
