--- a/app/www/includes/_header.jade
+++ b/app/www/includes/_header.jade
@@ -3,6 +3,6 @@
     .row
       .col-sm-10.col-sm-offset-1
         h1.
-          4ward Fabrications
+          <span>4ward</span> Fabrications
         h2.
           Specialising in all aspects of welding, metal fabrication, maintenance and repairs.
