--- a/app/www/assets/css/modules/navbar.css
+++ b/app/www/assets/css/modules/navbar.css
@@ -2,10 +2,14 @@ section#navbar .navbar {
   margin-bottom: 0px;
 }
 
-a.navbar-brand {
+section#navbar a.navbar-brand {
   width: 150px;
   height: 50px;
   padding: 5px 15px;
   background: url("/assets/images/logos/brand_480x160.png") no-repeat center center;
   background-size: 120px 40px;
+}
+
+section#navbar a:hover {
+  color: #5fb26a;
 }
