renaming to convention

--- a/app/www/assets/css/main.css
+++ b/app/www/assets/css/main.css
@@ -2,4 +2,4 @@
 @import './modules/navbar.css';
 @import './modules/header.css';
 @import './modules/jumbotron.css';
-@import './modules/quoteform.css';
+@import './modules/quote_form.css';
