--- a/app/www/index.jade
+++ b/app/www/index.jade
@@ -13,6 +13,6 @@ html(lang="en")
     section#header
       include ./includes/_header.jade
     section#quoteform
-      include ./includes/_quoteform.jade
+      include ./includes/_quote_form.jade
     footer
       include ./includes/_footer.jade
