--- a/app/www/assets/css/main.css
+++ b/app/www/assets/css/main.css
@@ -2,4 +2,5 @@
 @import './modules/navbar.css';
 @import './modules/header.css';
 @import './modules/jumbotron.css';
+@import './modules/alerts.css';
 @import './modules/quote_form.css';
