--- a/app/www/includes/_footer.jade
+++ b/app/www/includes/_footer.jade
@@ -1,3 +1,7 @@
 script(src='/assets/js/lib/jquery-2.1.3.min.js', type='text/javascript')
 script(src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js', type='text/javascript')
-script(src='/assets/js/main.js', type='text/javascript')
+script(src='/assets/js/modules/alerts.js', type='text/javascript')
+script(src='/assets/js/modules/quote_form.js', type='text/javascript')
+script(type='text/javascript').
+  var alerts = new Alerts($('div#alerts'));
+  var quoteForm = new QuoteForm("/api/emailer", alerts);
