--- a/app/www/includes/_head.jade
+++ b/app/www/includes/_head.jade
@@ -7,3 +7,7 @@ title= site.title
 
 link(href='//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css', rel='stylesheet', type='text/css')
 link(href='/assets/css/main.css', rel='stylesheet', type='text/css')
+
+script(src='/assets/js/lib/jquery-2.1.3.min.js', type='text/javascript')
+script(src='/assets/js/modules/alerts.js', type='text/javascript')
+script(src='/assets/js/modules/quote_form.js', type='text/javascript')
