--- a/app/www/index.jade
+++ b/app/www/index.jade
@@ -14,5 +14,6 @@ html(lang="en")
       include ./includes/_header.jade
     section#quoteform
       include ./includes/_quote_form.jade
+    include ./includes/scripts/_home.jade
     footer
       include ./includes/_footer.jade
