--- a/app/www/includes/scripts/_home.jade
+++ b/app/www/includes/scripts/_home.jade
@@ -4,5 +4,5 @@ script(src='/assets/js/modules/alerts.js', type='text/javascript')
 script(src='/assets/js/modules/quote_form.js', type='text/javascript')
 script(type='text/javascript').
   (function() {
-      QuoteForm.call({}, $('section#quoteform'), "/api/emailer", new Alerts($('div#alerts')));
-  })();
+      this.QuoteForm.call({}, $('section#quoteform'), "/api/emailer", new Alerts($('div#alerts')));
+  })(this);
