changing name of body to text for alignment with mailgun

--- a/app/www/includes/_quote_form.jade
+++ b/app/www/includes/_quote_form.jade
@@ -17,7 +17,7 @@
       .row
         .col-md-8.col-md-offset-2
           .form-group
-            textarea#body.form-control(name='body', rows='5', placeholder='Your message...')
+            textarea#text.form-control(name='text', rows='5', placeholder='Your message...')
       .row
         .col-md-8.col-md-offset-2
           .form-group
