--- a/app/www/includes/scripts/_home.jade
+++ b/app/www/includes/scripts/_home.jade
@@ -1,6 +1,3 @@
 script(src='/assets/js/modules/alerts.js', type='text/javascript')
 script(src='/assets/js/modules/quote_form.js', type='text/javascript')
-script(type='text/javascript').
-  (function() {
-      this.QuoteForm.call({}, $('section#quoteform'), "/api/emailer", new Alerts($('div#alerts')));
-  })(this);
+script(src='/assets/js/modules/app_home_page.js', type='text/javascript')
