--- a/app/www/includes/_head.jade
+++ b/app/www/includes/_head.jade
@@ -5,5 +5,5 @@ meta(name="description", content="#{site.description}")
 meta(name='author', content="#{site.author}")
 title= site.title
 
-link(href='//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css', rel='stylesheet', type='text/css')
+link(href='/assets/css/lib/bootstrap.min.css', rel='stylesheet', type='text/css')
 link(href='/assets/css/main.css', rel='stylesheet', type='text/css')
