--- a/app/www/includes/_contact_form.jade
+++ b/app/www/includes/_contact_form.jade
@@ -7,9 +7,9 @@
         h2.
           Send us a message with some details about your request and we will call you back!
   .container-fluid
-    a(name='quoteform')
+    a(name='contactform')
     form
-      input#subject.form-control(type='hidden', name='subject', value='quote')
+      input#subject.form-control(type='hidden', name='subject', value='Site Contact Form')
       .row
         .col-md-8.col-md-offset-2
           .form-group
