--- a/app/www/includes/_navbar.jade
+++ b/app/www/includes/_navbar.jade
@@ -10,5 +10,5 @@ nav.navbar.navbar-default.4wardfab-nav(role="navigation")
     #4wardfabrication-navbar-collapse.collapse.navbar-collapse
       ul.nav.navbar-nav.navbar-right
         li
-          a(href="#quoteform").
-            Quote
+          a(href="#contactform").
+            Contact
