--- a/app/www/index.jade
+++ b/app/www/index.jade
@@ -12,8 +12,8 @@ html(lang="en")
       include ./includes/_navbar.jade
     section#header
       include ./includes/_header.jade
-    section#quoteform
-      include ./includes/_quote_form.jade
+    section#contactform
+      include ./includes/_contact_form.jade
     include ./includes/scripts/_site_wide.jade
     include ./includes/scripts/_home.jade
     footer
