--- a/app/www/assets/css/main.css
+++ b/app/www/assets/css/main.css
@@ -3,4 +3,4 @@
 @import './modules/header.css';
 @import './modules/jumbotron.css';
 @import './modules/alerts.css';
-@import './modules/quote_form.css';
+@import './modules/contact_form.css';
