shortening a name for contact form

--- a/app/www/includes/_contact_form.jade
+++ b/app/www/includes/_contact_form.jade
@@ -7,7 +7,7 @@
         h2.
           Send us a message with some details about your request and we will call you back!
   .container-fluid
-    a(name='contactform')
+    a(name='contact')
     form
       input#subject.form-control(type='hidden', name='subject', value='Site Contact Form')
       .row
