--- a/app/www/index.jade
+++ b/app/www/index.jade
@@ -1,6 +1,6 @@
 - var site =  {};
 - site.title = '4ward Fabrications | Home';
-- site.description = 'This is the description';
+- site.description = '4ward Fabrications is a small business offering mobile fabrication and welding services to the community and commercial industries. If it can be made with steel, we can make it to your requirements!';
 - site.author = 'Anthony Sceresini <me-at-ardel.io>';
 
 doctype html
