adding logo to feedback page

--- a/app/www/assets/css/main.css
+++ b/app/www/assets/css/main.css
@@ -1,5 +1,6 @@
 @import './general.css';
 @import './modules/navbar.css';
+@import './modules/logo.css';
 @import './modules/header.css';
 @import './modules/jumbotron.css';
 @import './modules/alerts.css';
