--- a/app/www/feedback/index.jade
+++ b/app/www/feedback/index.jade
@@ -8,8 +8,8 @@ html(lang="en")
   head
     include ../includes/_head.jade
   body
-    section#navbar
-      include ../includes/_navbar.jade
+    section#logo
+      include ../includes/_logo.jade
     section#feedback-form
       include ../includes/_feedback_form.jade
     include ../includes/scripts/_site_wide.jade
