--- a/app/www/assets/css/modules/feedback_form.css
+++ b/app/www/assets/css/modules/feedback_form.css
@@ -19,17 +19,18 @@ section#feedback-form button {
   color: #fff;
 }
 
-section#feedback-form input.has-error,
-section#feedback-form textarea.has-error {
-  border-color: #a94442;
+section#feedback-form #rating.has-error,
+section#feedback-form input.text.has-error,
+section#feedback-form textarea.text.has-error {
+  border: 1px solid #a94442;
 }
 
-section#feedback-form input {
+section#feedback-form input.text {
   height: 47px;
 }
 
-section#feedback-form input,
-section#feedback-form textarea {
+section#feedback-form input.text,
+section#feedback-form textarea.text {
   border: 1px solid #c7c7c7;
   border-radius: 2px;
   padding: 10px 15px;
@@ -42,4 +43,38 @@ section#feedback-form textarea {
   text-shadow: none;
   text-align: start;
   font-size: 1em;
+}
+
+section#feedback-form #rating {
+  border: 1px solid rgba(255, 255, 255, 0);
+  text-align: left;
+  border-radius: 2px;
+  padding: 5px 0;
+}
+
+section#feedback-form #rating #rating-heading {
+  padding-top: 5px;
+}
+
+section#feedback-form #rating label {
+  background-color: rgba(242, 92, 69, .4);
+  color: white;
+  width: 100%;
+  padding: 5px 0 2px 0;
+  text-align: center;
+  cursor: pointer;
+  border-radius: 2px;
+  margin: 0;
+}
+
+section#feedback-form #rating label:hover {
+  background-color: rgba(242, 92, 69, .7);
+}
+
+section#feedback-form #rating input:checked+label {
+  background-color: rgba(242, 92, 69, 1);
+}
+
+section#feedback-form #rating input {
+  display: none;
 }
