--- a/app/www/includes/_feedback_form.jade
+++ b/app/www/includes/_feedback_form.jade
@@ -19,26 +19,27 @@
             input#name.text.form-control(type='text', name='name', placeholder='Your name')
       .row
         .col-md-8.col-md-offset-2
-          #rating.form-group
-            .container-fluid
-              .row
-                .col-sm-4.col
-                    #rating-heading Rate our service
-                .col-sm-1.col-sm-offset-3
-                  input#rating1.form-control(type='radio', name='rating', value='1')
-                  label(for='rating1') 1
-                .col-sm-1
-                  input#rating2.form-control(type='radio', name='rating', value='2')
-                  label(for='rating2') 2
-                .col-sm-1
-                  input#rating3.form-control(type='radio', name='rating', value='3')
-                  label(for='rating3') 3
-                .col-sm-1
-                  input#rating4.form-control(type='radio', name='rating', value='4')
-                  label(for='rating4') 4
-                .col-sm-1
-                  input#rating5.form-control(type='radio', name='rating', value='5')
-                  label(for='rating5') 5
+          #ratings
+            #workmanship.form-group
+              .container-fluid
+                .row
+                  .col-sm-4.col
+                    .heading Quality of Workmanship
+                  .col-sm-1.col-sm-offset-3
+                    input#workmanship1.form-control(type='radio', name='workmanship', value='1')
+                    label(for='workmanship1') 1
+                  .col-sm-1
+                    input#workmanship2.form-control(type='radio', name='workmanship', value='2')
+                    label(for='workmanship2') 2
+                  .col-sm-1
+                    input#workmanship3.form-control(type='radio', name='workmanship', value='3')
+                    label(for='workmanship3') 3
+                  .col-sm-1
+                    input#workmanship4.form-control(type='radio', name='workmanship', value='4')
+                    label(for='workmanship4') 4
+                  .col-sm-1
+                    input#workmanship5.form-control(type='radio', name='workmanship', value='5')
+                    label(for='workmanship5') 5
       .row
         .col-md-8.col-md-offset-2
           .form-group
