adding rating for communication

--- a/app/www/includes/_feedback_form.jade
+++ b/app/www/includes/_feedback_form.jade
@@ -20,7 +20,7 @@
       .row
         .col-md-8.col-md-offset-2
           #ratings
-            #workmanship.form-group
+            #ratings-workmanship.form-group
               .container-fluid
                 .row
                   .col-sm-4.col
@@ -40,6 +40,26 @@
                   .col-sm-1
                     input#workmanship5.form-control(type='radio', name='workmanship', value='5')
                     label(for='workmanship5') 5
+            #ratings-communication.form-group
+              .container-fluid
+                .row
+                  .col-sm-4.col
+                    .heading Communication
+                  .col-sm-1.col-sm-offset-3
+                    input#communication1.form-control(type='radio', name='communication', value='1')
+                    label(for='communication1') 1
+                  .col-sm-1
+                    input#communication2.form-control(type='radio', name='communication', value='2')
+                    label(for='communication2') 2
+                  .col-sm-1
+                    input#communication3.form-control(type='radio', name='communication', value='3')
+                    label(for='communication3') 3
+                  .col-sm-1
+                    input#communication4.form-control(type='radio', name='communication', value='4')
+                    label(for='communication4') 4
+                  .col-sm-1
+                    input#communication5.form-control(type='radio', name='communication', value='5')
+                    label(for='communication5') 5
       .row
         .col-md-8.col-md-offset-2
           .form-group
