--- a/app/www/includes/_feedback_form.jade
+++ b/app/www/includes/_feedback_form.jade
@@ -19,6 +19,9 @@
             input#name.text.form-control(type='text', name='name', placeholder='Your name')
       .row
         .col-md-8.col-md-offset-2
+          .legend 1 = Poor, 2 = Fair, 3 = Average, 4 = Good, 5 = Excellent
+      .row
+        .col-md-8.col-md-offset-2
           #ratings
             #ratings-workmanship.form-group
               .container-fluid
