legend background to charcoal

--- a/app/www/assets/css/modules/feedback_form.css
+++ b/app/www/assets/css/modules/feedback_form.css
@@ -9,7 +9,7 @@ section#feedback-form form {
 }
 
 section#feedback-form .legend {
-  background: #5fb26a;
+  background: #333333;
   border-radius: 2px;
   margin: 0 0 5px 0;
   padding: 10px 15px;
