--- a/app/www/index.jade
+++ b/app/www/index.jade
@@ -2,6 +2,7 @@
 - site.title = '4ward Fabrications | Home';
 - site.description = '4ward Fabrications is a small business offering mobile fabrication and welding services to the community and commercial industries. If it can be made with steel, we can make it to your requirements!';
 - site.author = 'Anthony Sceresini <me-at-ardel.io>';
+- site.facebook_url = 'https://www.facebook.com/4wardfabrications';
 
 doctype html
 html(lang="en")
@@ -14,6 +15,8 @@ html(lang="en")
       include ./includes/_header.jade
     section#contactform
       include ./includes/_contact_form.jade
+    section#facebook
+      include ./includes/_facebook.jade
     include ./includes/scripts/_site_wide.jade
     include ./includes/scripts/_home.jade
     footer
