adding keywords to meta tag

--- a/app/www/index.jade
+++ b/app/www/index.jade
@@ -2,6 +2,7 @@
 - site.title = '4ward Fabrications | Home';
 - site.description = '4ward Fabrications is a small business offering mobile fabrication and welding services to the community and commercial industries. If it can be made with steel, we can make it to your requirements!';
 - site.author = 'Anthony Sceresini <me-at-ardel.io>';
+- site.keywords = 'steel fabrication,welding,cutting,construction,mining,building,residential,custom,maintenance,repairs,fixed plant,mobile plant,quality work'
 - site.facebook_url = 'https://www.facebook.com/4wardfabrications';
 
 doctype html
