--- a/app/www/includes/_head.jade
+++ b/app/www/includes/_head.jade
@@ -2,6 +2,7 @@ meta(charset="utf-8")
 meta(content="IE=edge,chrome=1", "http-equiv"="X-UA-Compatible")
 meta(content="width=device-width initial-scale=1", name="viewport")
 meta(name="description", content="#{site.description}")
+meta(name="keywords", content="#{site.keywords}")
 meta(name='author', content="#{site.author}")
 title= site.title
 
