--- a/app/www/assets/css/modules/facebook.css
+++ b/app/www/assets/css/modules/facebook.css
@@ -4,6 +4,7 @@ section#facebook {
 }
 
 section#facebook a {
+  float: right;
   text-decoration: none;
 }
 
@@ -13,11 +14,6 @@ section#facebook img#facebook-logo {
 
 section#facebook div#facebook-message {
   text-align: right;
-}
-
-section#facebook div#facebook-message h2,
-section#facebook div#facebook-message p {
-  display: inline-block;
 }
 
 section#facebook div#facebook-message h2,
